# pif

./: .gitignore  CONFIG.md  Cargo.toml  Makefile.t3m  README.MD  Settings.yaml  TODO.MD  build.rs  dialog-extensions.json  dialog-extensions.yaml  dist-workspace.toml  inform6-extensions.yaml  model.rs  tads3-extensions.json  tads3-extensions.yaml  util.sh
.github/workflows/: ci.yml  release.yml
assets/man/: pif-config-dir-reset.1  pif-config-dir-set.1  pif-config-dir.1  pif-config-show.1  pif-config-systems-add.1  pif-config-systems-remove.1  pif-config-systems-reset.1  pif-config-systems-set.1  pif-config-systems.1  pif-config-verbose-reset.1  pif-config-verbose-set.1  pif-config-verbose.1  pif-config-versions-add.1  pif-config-versions-remove.1  pif-config-versions-reset.1  pif-config-versions-set.1  pif-config-versions.1  pif-config.1  pif-info.1  pif-install.1  pif-list.1  pif-publish.1  pif-registry-clean.1  pif-registry-list.1  pif-registry-remove.1  pif-registry.1  pif-search.1  pif-tags.1  pif-update.1  pif.1
src/: args.rs  color.rs  common.rs  db.rs  detect.rs  download.rs  gitops.rs  info.rs  install.rs  list.rs  main.rs  makefile.rs  model.rs  publish.rs  settings.rs  update.rs
src/config/: dir.rs  mod.rs  systems.rs  verbose.rs  versions.rs
