[package]
name = "pif"
version = "0.1.0"
authors = ["Tomas Öberg"]
description = "PIF - A CLI package manager for interactive fiction languages"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }

http = "0.2.9"
hyper = "0.14.26"
json = "0.12.4"
reqwest = { version = "0.11.17", features = ["blocking"] }
ansi_term = "0.12"

serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
git2 = "0.17.1"
zip-extract = "0.1.2"
sublime_fuzzy = "0.7.0"
glob = "0.3.1"
globwalk = "0.8.1"
dotenv = "0.15.0"
home = "0.5.5"
dirs = "5.0.1"
semver = "1.0.17"
online = "4.0.1"
mockall = "0.11.4"
regex = "1.10.5"
lazy_static = "1.5.0"
dirs-next = "2.0.0"
config = "0.14.1"
log = { version = "0.4", features = ["std", "serde"] }
rusqlite = "0.32.1"

#tui = { version = "0.19.0" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
