[package]
name = "pif"
version = "0.2.1"
authors = ["Tomas Öberg <tomaserikoberg@gmail.com>"]
description = "PIF - A CLI package manager for interactive fiction languages"
license = "MIT"
repository = "https://github.com/toerob/pif"
homepage = "https://github.com/toerob/pif"
keywords = ["interactive-fiction", "tads3", "dialog", "inform", "package-manager"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.70"

[dependencies]
clap         = { version = "4.6",  features = ["derive"] }
reqwest      = { version = "0.12", features = ["blocking"] }
ansi_term    = "0.12"
serde        = { version = "1.0",  features = ["derive"] }
git2         = "0.20"
zip-extract  = "0.2"
sublime_fuzzy = "0.7"
glob         = "0.3"
globwalk     = "0.9"
semver       = { version = "1.0",  features = ["serde"] }
regex        = "1.12"
lazy_static  = "1.5"
dirs-next    = "2.0"
config       = "0.15"
rusqlite     = { version = "0.32", features = ["bundled"] }
serde_yaml   = "0.9"
chrono       = "0.4"
dialoguer    = "0.11"
open         = "5"
deunicode    = "1"

[dev-dependencies]
assert_cmd  = "2.2"
predicates  = "3.1"
mockall     = "0.13"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
